[package]
name = "snake"
version = "0.1.0"
authors = ["Letharrick"]
edition = "2018"

[dependencies]
bracket-terminal = "0.8.5"
rand = "0.8.4"
wasm-bindgen = "0.2.74"
web-sys = "0.3.51"
getrandom = { version = "0.2.3", features = ["js"] }

[lib]
name = "snake_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snake_bin"
path = "src/bin/main.rs"